# FriendMemory

./: .env.example  .gitignore  README.md  README_EN.md  USAGE.md  pyproject.toml
app/: ai.py  env_config.py  main.py  models.py  scoring.py  server.py  signals.py  system.py
data/: friend_memory_state.json
examples/: ai_participation_demo.py  audit_coverage_demo.py  decision_evidence_demo.py  demo.py  generate_sample_evidence.py  memory_ai_worker.py
